--- a/mypage.html
+++ b/mypage.html
@@ -4,15 +4,19 @@
         <title>MynameisEric!</title>
     </head>
     <body>
-        <h1>Hi, I'm Eric and welcome to my bio page!</h1>
-        <h2>Here are some fun facts about Eric:</h2>
+        <h1>Hi, I'm Eric and welcome to my page!</h1>
+        <h2>Here are some fun facts about me:</h2>
         <or> 
             <li>I work here: <a href="https://www.musicarts.com/"target="_blank">MyWork</a></li>
-            <li>I live here: <a href="https://www.woodstockga.gov/"target="_blank">Woodstock,GA</a></li>
+            <li>I live here: <a href="https://visitwoodstockga.com/"target="_blank">Woodstock,GA</a></li>
             <li>I own a knife company called <a href="https://knafsale.com/">Knafsale.com</a></li>
-            <or>
+        <or>
         <h2>I also love animals!</h2> 
-        <h3> Like this guy:</h3>
-        <img src="http://cdn.akc.org/content/article-body-image/golden_puppy_dog_pictures.jpg">
-         </body>
+        <h3>Like this guy:</h3>
+        <ul>
+           <img src="http://cdn.akc.org/content/article-body-image/golden_puppy_dog_pictures.jpg">
+        <h3>Or this guy:</h3>  
+           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAb3kt2coCgU648ial1M8ghY_YDP1HcLBK9A&usqp=CAU">
+           <p> So far in clas, I have leared what VS Code is and how to use it. I've learned basic CLI commands. I've learned how to create a repo and push files from local to Github.</p>
+    </body>
 </html>
